--- a/S04.01-Exercise-LaunchNewActivity/app/src/main/AndroidManifest.xml
+++ b/S04.01-Exercise-LaunchNewActivity/app/src/main/AndroidManifest.xml
@@ -31,10 +31,14 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!--TODO (4) Configure DetailActivity's up button functionality-->
+        <activity android:name=".DetailActivity"
+            android:label="@string/details"
+            android:parentActivityName=".MainActivity">
+        </activity>
     </application>
 
 </manifest>
